# NetTest

./: .gitignore  CMakeLists.txt  README.md
src/Client/: client.c
src/Server/: main.c
